    - help.php: Added expired_lists_inactive entry.
    - install.pl: Added Asterisk 13 compability pieces.
  * New extras/mysql_update/mysql-1518.sql (2017-033).
  * Add upstream Rev. 2818:
    - AST_manager_listen_AMI2.pl
      AST_update_AMI2.pl: Comment out telnet log.
    - Changes UPGRADE:
      + New Requirement: Net::Telnet version 3.0.4

2.25.11

  [Jörg Frings-Fürst]
  * Add upstream Rev. 2813:
    - New AST_agent_inbound_status.php.
    - user_status.php: Removed non-functional change-campaign feature
  * Add upstream Rev. 2814:
    - vdc_db_query.php: Fix for no-hopper dnc dialing issue
    - vicidial.php: Fix for no-hopper dnc dialing issue, Small change for
        two agent events.
  * Add upstream Rev. 2815:
    - vicidial.php: Fix for script tab issue.
  * Add upstream Rev. 2816:
    - admin_bulk_tools.php: Added IGNORE to bulk inserts to not error out
       entire statement if only one entry is a unique index duplicate.
  * Add missing fields into vicidial_agent_log_archive (2017-032).
  * New extras/mysql_update/mysql-1517.sql.
  * Release 2.25.11 2017-09-19

2.25.10

  [Jörg Frings-Fürst]
  * Remove old files from LANG_www.
  * first_server_install.sql:
    - Remove testphones.
  * install.pl:
    - Remove svn.
    - Correct typo.
  * Add upstream Rev. 2812:
    - agi-VDAD_ALL_inbound.agi: Added additional xfer_log details
    - ADMIN_archive_log_tables.pl: Added rolling of vicidial_xfer_log
    - AST_CLOSER_service_level.php,
      AST_CLOSERstats.php,
      AST_CLOSERstats_v2.php,
      AST_CLOSERsummary_hourly.php,
      AST_DIDstats.php,
      AST_DIDstats_v2.php,
      AST_IVRstats.php,
      AST_LISTS_campaign_stats.php,
      AST_LISTS_pass_report.php,
      AST_LISTS_stats.php,
      AST_VDADstats.php,
      AST_agentDIDstats.php,
      AST_agent_days_time.php,
      AST_agent_debug_log_report.php,
      AST_agent_performance_detail.php,
      AST_agent_status_detail.php,
      AST_agent_time_detail.php,