@@ -41,6 +41,18 @@
       AST_update_AMI2.pl: Comment out telnet log.
     - Changes UPGRADE:
       + New Requirement: Net::Telnet version 3.0.4
+  * Add upstream Rev. 2819:
+    - agi-VDAD_ALL_inbound.agi,
+      agi-VDAD_ALL_outbound.agi,
+      agi-VDAD_ALL_outboundBETA.agi,
+      agi-VDAD_ALL_outboundBETA2.agi,
+      manager_send.php: Fix for CALLID in beginning of
+        recording filename.
+    - Changes at ADMIN_keepalive_ALL.pl.
+    - AST_conf_update_3way.pl: Added support for AMI2.
+    - AST_manager_listen.pl: Fix for issue with recordings beginning with 
+        CALLID variable, Merged code from AST_manager_listenBUFFER.pl script.
+    - Depricat AST_manager_listenBUFFER.pl.
 
 2.25.11
 
